--- a/apartment.html
+++ b/apartment.html
@@ -203,11 +203,7 @@
                 data-wow-delay="0.1s"
               >
                 <h1 class="mb-3">Apartment List</h1>
-                <p>
-                  Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut
-                  dolore lorem kasd vero ipsum sit eirmod sit diam justo sed
-                  rebum.
-                </p>
+                <p>Here Are some Apartments Which are under our Services.</p>
               </div>
             </div>
             <div
@@ -266,26 +262,26 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
+                      <h5 class="text-primary mb-3">₹1,50,00,00</h5>
                       <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
+                        >A-07 Golden City Park</a
                       >
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Parekh Street, Goregaon(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >800 Sqft With Gallery</small
                       >
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
                         ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        Bath+washroom</small
                       >
                     </div>
                   </div>
@@ -311,27 +307,25 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹1,50,000</h5>
+                      <a class="d-block h5 mb-2" href="">Mehta's Palace</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Royal Palm, Aarey Colony, Goregaon(east)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1200 Sqft + Pool</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i>4 Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
-                      >
+                        ><i class="fa fa-bath text-primary me-2"></i> 4 Bath +
+                        washroom with 1 common
+                      </small>
                     </div>
                   </div>
                 </div>
@@ -356,26 +350,25 @@
                       </div>
                     </div>
                     <div class="p-4 pb-0">
-                      <h5 class="text-primary mb-3">₹12,345</h5>
-                      <a class="d-block h5 mb-2" href=""
-                        >Golden Urban House For Sell</a
-                      >
+                      <h5 class="text-primary mb-3">₹10,00,000</h5>
+                      <a class="d-block h5 mb-2" href="">Indralok Apartment</a>
                       <p>
                         <i class="fa fa-map-marker-alt text-primary me-2"></i
-                        >123 Street, New York, USA
+                        >Lokhandwala, Kandivali(East)
                       </p>
                     </div>
                     <div class="d-flex border-top">
                       <small class="flex-fill text-center border-end py-2"
                         ><i class="fa fa-ruler-combined text-primary me-2"></i
-                        >1000 Sqft</small
+                        >1800 Sqft</small
                       >
                       <small class="flex-fill text-center border-end py-2"
-                        ><i class="fa fa-bed text-primary me-2"></i>3 Bed</small
+                        ><i class="fa fa-bed text-primary me-2"></i> 5
+                        Bed</small
                       >
                       <small class="flex-fill text-center py-2"
-                        ><i class="fa fa-bath text-primary me-2"></i>2
-                        Bath</small
+                        ><i class="fa fa-bath text-primary me-2"></i>4
+                        Bath+washroom++Pool</small
                       >
                     </div>
                   </div>
