--- a/property-type.html
+++ b/property-type.html
@@ -111,7 +111,7 @@
 
         <!-- Search Start -->
         <div class="container-fluid bg-primary mb-5 wow fadeIn" data-wow-delay="0.1s" style="padding: 35px;">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row g-2">
                     <div class="col-md-10">
                         <div class="row g-2">
@@ -140,7 +140,7 @@
                         <button class="btn btn-dark border-0 w-100 py-3">Search</button>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- Search End -->
 
